<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="admin_title">Administrator</string>
    <string name="admin_code_prompt">Enter master code</string>
    <string name="error">Error</string>
    <string name="status_always_allowed">Always Allowed</string>
    <string name="status_scheduled">Scheduled</string>
    <string name="status_admin_only">Admin Only</string>
    <string name="status_blocked">Blocked</string>
    <string name="status_hidden">Hidden</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_show">Show</string>
    <string name="cd_block_app">Block %s</string>
    <string name="cd_unblock_app">Unblock %s</string>
    <string name="cd_hide_app">Hide %s</string>
    <string name="cd_show_app">Show %s</string>
    <string name="cd_status_label">Status: %s</string>
    <string name="admin_update_section">App Update</string>
    <string name="admin_check_update">Check for Update</string>
    <string name="back">Back</string>
    <string name="enter_master_code">Enter Master Code</string>
</resources>
